# lua-kafka

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: consumer.lua  producer.lua
rockspec/: kafka-1.8.2-1.rockspec
src/: consumer.c  kafka.c  kafka.h  producer.c
